# Smart-ActiveCut

./: README.md
src/: CMakeLists.txt  block.h  common.h  gmm.cxx  gmm.h  grabcutseg.cxx  graph.cpp  graph.h  graphcuts.cxx  graphcuts.h  instances.inc  loadfiles.cxx  loadfiles.h  maxflow.cpp  query.cxx  query.h  utility.cxx  utility.h
